Restructured webpack config to support dev and prod environments

--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ Thumbs.db
 
 # Ignore the build directory #
 #####################
-#/build
+#/dist
 
 # Ignore Sass' cache #
 #####################
