--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@babel/preset-react": "^7.0.0-beta.39",
     "babel-loader": "^8.0.0-beta.0",
     "css-loader": "^0.28.9",
+    "eslint": "^4.18.1",
+    "eslint-loader": "^1.9.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
